samples/_failures_safe/1761368803_eb08b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2152adb8.c: In function ‘main’:
./samples/SAFE/__tmp_2152adb8.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_2152adb8.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2152adb8.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2152adb8.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2152adb8.c:154:17: error: expected declaration or statement at end of input
